Now Date object can be parsed from String as property